fix z-index

--- a/src/scenes/Home/sections/AboutMe/AboutMe.scss
+++ b/src/scenes/Home/sections/AboutMe/AboutMe.scss
@@ -139,7 +139,6 @@
     fill: #262b2e;
     stroke: #262b2e;
     bottom: 0;
-    z-index: 1000;
     width: 100%;
   }
 }
